# samples-sphinx

./: .gitignore  README.rst  pyproject.toml  tasks.py
docs/: .buildinfo  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_downloads/0b5d19d6fe38bf3e18335119ec595727/: tasks.py
docs/_downloads/fb0d0d7ff27f33697ba3b787ec894677/: conf.py
docs/_sources/: index.rst.txt
docs/_sources/src/: getting_started.rst.txt  literature.rst.txt  rest.rst.txt
docs/_sources/src/contributing/: development.rst.txt
docs/sphinx/: conf.py  index.rst
docs/sphinx/_build/: .gitignore
docs/sphinx/src/: api.rst  development.rst  literature.rst  quality.rst  references.rst  rest.rst  userguide.rst
docs/sphinx/src/api/: utils.rst
docs/sphinx/src/development/: authors.rst  changelog.rst  configuration.rst  contributing.rst  docs.rst  installation.rst  license.rst  task_runner.rst
docs/src/: contributing.html  contributing.rst  getting_started.html  literature.html  rest.html
docs/src/contributing/: authors.html  changelog.html  configuration.html  contributing.html  development.html  installation.html  license.html  reST.rst  usage.html
src/: main.py
src/utils/: arithmetic.py
