[tool.poetry]
name = "samples-sphinx"
version = "1.0.0-beta"
description = "Arteklabs Samples: Sphinx"
authors = [
    "arteklabs <arteklabs@fastmail.com>"
]
readme = "README.rst"
homepage = ""
repository = ""
keywords = [
    "python", "sphinx", "github-pages"
]
classifiers = []

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
furo = "^2023.3.27"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
autoflake = "^2.0.0"
isort = "^5.11.3"
invoke="^2.0.0"
sphinx="^6.1.3"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py37", "py38", "py39"]
include = '\.pyi?$'
line-length = 120

[tool.isort]
profile = "black"
src_paths = ["dmacli", "tests"]

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
